# efr32mg21_proj

./: README.md
pcb/debug_breakout/: debug_breakout-cache.lib  debug_breakout.kicad_pcb  debug_breakout.pro  debug_breakout.sch  mini_simplicity.sch
pcb/efr32mg21_devboard/: efr32mg21_devboard-cache.lib  efr32mg21_devboard-rescue.lib  efr32mg21_devboard.kicad_pcb  efr32mg21_devboard.pro  efr32mg21_devboard.sch  sym-lib-table
proj/blink/: CMakeLists.txt  main.c
proj/toolchain/: efm32-base.cmake  flash.in  reset.jlink
